Fix double borders

--- a/style.css
+++ b/style.css
@@ -18,10 +18,13 @@ body, html {
     display: grid;
     grid-template-columns: repeat(3, max(25vh, 150px));
     grid-template-rows: repeat(3, max(25vh, 150px));
+    border-left: 4px solid black;
+    border-top: 4px solid black;
 }
 
 .square {
-    border: 5px solid black;
+    border-bottom: 4px solid black;
+    border-right: 4px solid black;
     font-size: 10rem;
     place-items: center;
     text-align: center;
@@ -34,4 +37,9 @@ body, html {
 
 .square:active {
     opacity: 0.8;
+}
+
+.newGame {
+    width: 5rem;
+    height: 5rem;
 }
